added information to README.md file, changed author in package.json file

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A terminal maze-solving game.",
   "main": "main.js",
-  "author": "Codecademy",
+  "author": "Kevin Albarran",
   "license": "ISC",
   "dependencies": {
     "prompt-sync": "^4.1.7"
